--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   animated_text_kit: ^4.2.1
   url_launcher: ^6.0.9
   carousel_slider: ^4.0.0
+  url_strategy: ^0.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
